--- a/report.Rmd
+++ b/report.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "My Super Fancy Report"
 author: "David Keyes"
-output: word_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
