--- a/data-wrangling-and-analysis-examples.Rmd
+++ b/data-wrangling-and-analysis-examples.Rmd
@@ -11,7 +11,9 @@ output:
 
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE,
+                      warning = FALSE,
+                      message = FALSE)
 ```
 
 ```{r}
